...
    <string name="album_release">Lanzamiento</string>
    <string name="albumCoverDescription">Carátula del álbum</string>
    <string name="collectors">Todos los coleccionistas</string>
    <string name="list_collectors">Lista de coleccionistas</string>
    
    <!-- Strings del detalle del coleccionista -->
    <string name="collector_email">Email:</string>
    <string name="collector_phone">Teléfono:</string>
    <string name="collector_detail">Detalle del coleccionista</string>

    <!-- Strings de agregar track -->
    <string name="agregar_track">Agrega Cancion</string>
    <string name="add_track_title">Agrega Canción al Album</string>
    <string name="save_track_album">Agregar canción al álbum</string>
...
